# dtc-api-sdk

./: .gitignore  LICENSE  QUICKSTART_GUIDE.md  README.md  openapi.json  pyproject.toml  requirements.txt  run_unit_tests.py  setup.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  PDF_PROCESSING_PIPELINE_GUIDE.md  PIPE_VS_TASK_WORKFLOWS.md  SDK_ARCHITECTURE.md  USER_GUIDE.md
dtc_api_sdk/: __init__.py  client.py  exceptions.py  models.py
example_pipelines/: aparavi-project-export-new-project-2025-07-09T19-13.json  aparavi-project-export-new-project-2025-07-09T19-18.json  aparavi-project-export-new-project-2025-07-09T19-20.json  aparavi-project-export-new-project-2025-07-10T11-40.json  aparavi-project-export-new-project-2025-07-10T13-51.json  aparavi-project-export-new-project-2025-07-10T13-58.json
example_python_scripts/: document_processor.py
examples/: README.md  async_processing.py  audio_transcription_example.py  basic_usage.py  cli_example.py
notebooks/: Sample_Doc_Processing_Guide.ipynb
open_api_docs/: API_DOCUMENTATION.md
reference_code/: comprehensive_results_1752636507.json  curl_format_results.json  curl_format_test.py  process_invoice_webhook.py  processing_results.json  run_demo.ps1  run_full_demo.py  run_invoice_processing.py  simple_webhook_results_1752636427.json  simple_webhook_results_1752636668.json  test_10mb_results.json  test_basic_functionality.py  working_pdf_results.json  working_pdf_task_status.json
reference_code/examples/: file_processing.py  webhook_processing.py
reference_code/reference_doc/: ARCHITECTURE.md
reference_code/tests/: final_test.py  success_demo.py  test_audio_transcription.py  test_native_pipeline.py
test_data/: Challenge_LeadAiDev.docx
tests/: README.md  advanced_test.py  correct_format_test.py  simple_cli_test.py  test_final_pipeline.py  test_parse_pipeline.py  test_sdk.py  test_text_output.py
unit_tests/: UNIT_TESTS.md  __init__.py  test_chat_endpoint.py  test_dropper_endpoint.py  test_pipe_create_endpoint.py  test_pipe_delete_endpoint.py  test_pipe_process_endpoint.py  test_pipe_validate_endpoint.py  test_services_endpoint.py  test_status_endpoint.py  test_task_execute_endpoint.py  test_version_endpoint.py  test_webhook_endpoint.py
